// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should LoginForm render correctly should render basic form 1`] = `
<form
  action="#"
  className="sign-in__form"
>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-email"
        name="email"
        placeholder="Email address"
        type="email"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-password"
        name="password"
        placeholder="Password"
        type="password"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      onClick={[Function]}
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;

exports[`Should LoginForm render correctly should render form with auth error 1`] = `
<form
  action="#"
  className="sign-in__form"
>
  <div
    className="sign-in__message"
  >
    <p>
      We can’t recognize this email 
      <br />
       and password combination. Please try again.
    </p>
  </div>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-email"
        name="email"
        placeholder="Email address"
        type="email"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-password"
        name="password"
        placeholder="Password"
        type="password"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      onClick={[Function]}
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;

exports[`Should LoginForm render correctly should render form with incorrect email 1`] = `
<form
  action="#"
  className="sign-in__form"
>
  <div
    className="sign-in__message"
  >
    <p>
      Please enter a valid user data
    </p>
  </div>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field sign-in__field--error"
    >
      <input
        className="sign-in__input"
        id="user-email"
        name="email"
        placeholder="Email address"
        type="email"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-password"
        name="password"
        placeholder="Password"
        type="password"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      onClick={[Function]}
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;

exports[`Should LoginForm render correctly should render form with incorrect password 1`] = `
<form
  action="#"
  className="sign-in__form"
>
  <div
    className="sign-in__message"
  >
    <p>
      Please enter a valid user data
    </p>
  </div>
  <div
    className="sign-in__fields"
  >
    <div
      className="sign-in__field"
    >
      <input
        className="sign-in__input"
        id="user-email"
        name="email"
        placeholder="Email address"
        type="email"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-email"
      >
        Email address
      </label>
    </div>
    <div
      className="sign-in__field sign-in__field--error"
    >
      <input
        className="sign-in__input"
        id="user-password"
        name="password"
        placeholder="Password"
        type="password"
      />
      <label
        className="sign-in__label visually-hidden"
        htmlFor="user-password"
      >
        Password
      </label>
    </div>
  </div>
  <div
    className="sign-in__submit"
  >
    <button
      className="sign-in__btn"
      onClick={[Function]}
      type="submit"
    >
      Sign in
    </button>
  </div>
</form>
`;
